--- a/cc/package.json
+++ b/cc/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "creditunioncc",
+  "name": "bots-express-service-template",
   "version": "1.0.0",
-  "description": "Custom Components API for Ledcor ChatBot",
-  "main": "creditunioncc.js",
+  "description": "Bots Express-based component service template",
+  "main": "index.js",
+  "repository": {},
   "license": "ISC",
   "dependencies": {
-    "botkit-messenger-samples": "^1.1.0",
-    "joi": "^9.2.0",
-    "log4js": "^0.6.38",
-    "request": "^2.82.0"
-  },
-  "oracleMobile": {
-    "dependencies": {
-      "apis": {},
-      "connectors": {}
-    }
+    "express": "^4.13.4",
+    "body-parser": "^1.15.0",
+    "http-auth": "^3.1.3",
+    "joi": "^9.2.0"
   }
 }
