--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,22 +1,40 @@
+appnope==0.1.0
 asn1crypto==0.23.0
 certifi==2017.7.27.1
 cffi==1.11.2
 chardet==3.0.4
 click==6.7
 cryptography==2.0.3
+decorator==4.2.1
 enum34==1.1.6
 Flask==0.12.2
 idna==2.6
+imutils==0.4.5
 ipaddress==1.0.18
+ipython==6.2.1
+ipython-genutils==0.2.0
 itsdangerous==0.24
+jedi==0.11.1
 Jinja2==2.9.6
 MarkupSafe==1.0
+numpy==1.14.0
+opencv-python==3.4.0.12
+parso==0.1.1
+pexpect==4.3.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
 pycparser==2.18
+Pygments==2.2.0
 PyJWT==1.5.3
 pyOpenSSL==17.3.0
+PySocks==1.6.8
 pytz==2017.2
 requests==2.18.4
+simplegeneric==0.8.1
 six==1.11.0
+traitlets==4.3.2
 twilio==6.7.1
 urllib3==1.22
+wcwidth==0.1.7
 Werkzeug==0.12.2
